# one

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Taskfile.yml  pyproject.toml  todo.md
docs/: backtesting-the-future.html  design.html  historical-sandbox.html  index.html  silicon-sociology.html  the-yesterday-test.html  yesterday-test.html
docs/scripts/: theme.js
docs/styles/: site.css
docs/work/: index.html
docs/writing/: index.html  silicon-sociology.html
migrations/: 001_initial.sql
scripts/: benchmark_embeddings.py  generate_artifact_design_spec.py  logs.py  migrate.py  skill_creator.py
src/core/: CLAUDE.md  debug.py  events.py  images.py  log.py  prompt.py  text.py  transcripts.py
src/core/agents/: __init__.py  agent_ctx.py  board.py  coder.py  compact.py  grader.py  grader_context.py  grader_inspector.py  graders.py  hooks.py  ledger.py  lint.py  loop.py  manager.py  router.py  skills.py  subagent.py  summarize.py  task_ctx.py  workdir_registry.py  worktree.py
src/core/ai_client/: __init__.py  claude_client.py  costs.py  factory.py  fallback_client.py  gemini_client.py  gpt_client.py  image_gen.py  (+7 more)
tests/: test_agent_loop.py  test_continuation.py  test_exa_search.py  test_fallback.py  test_fs_grep.py  test_fs_read.py  test_fs_write_scope.py  test_gateway.py  test_git_tools.py  test_graders.py  test_hooks.py  test_image_gen_local.py  test_presets.py  test_router.py  test_scheduler.py  test_shell_guard.py  test_skills.py  test_task_inheritance.py  test_tool_output.py  test_visual_refs.py  test_workdir_routing.py  test_worktree_followup.py
(+48 files in other folders)
