[project]
name = "one"
version = "0.1.0"
description = "One monorepo"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "google-genai>=0.8.0",
    "exa-py>=1.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "ollama>=0.4.0",
    "sqlite-vec>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=3.4.1",
    "tiktoken>=0.12.0",
    "rich>=15.0.0",
    "croniter>=3.0.0",
    "pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
